# TeleView

./: README.md
backend/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  telegram_utils.py  test_main.http  users.db
frontend/: package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/app/login/: page.js
frontend/app/register/: page.js
frontend/components/: LoginForm.js  Navbar.js  RegisterForm.js
frontend/contexts/: AuthContext.js
frontend/lib/: api.js
